[package]
name = "arma3-parser-sqm"
version.workspace = true
edition.workspace = true

[dependencies]
arma3-parser-common = { workspace = true }
hemtt-sqm = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"

[[bench]]
name = "query_benchmarks"
harness = false