[package]
name = "arma3-scan-mission"
version.workspace = true
edition.workspace = true

[dependencies]
arma3-types = { workspace = true }
arma3-parser-sqm = { workspace = true }
arma3-parser-hpp = { workspace = true }
arma3-parser-common = { workspace = true }
arma3-analyze = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration_test.rs"
harness = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bench]]
name = "mission_scanner_benchmarks"
harness = false
